--- a/src/components/ListToDo/ListInput/ListInput.css
+++ b/src/components/ListToDo/ListInput/ListInput.css
@@ -11,7 +11,7 @@
 .form-control input {
   display: block;
   width: 100%;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(168, 184, 225);
   font: inherit;
   line-height: 1.5rem;
   padding: 0 0.25rem;
@@ -19,6 +19,6 @@
 
 .form-control input:focus {
   outline: none;
-  background: #fad0ec;
-  border-color: #8b005d;
+  background: rgb(168, 184, 225);
+  border-color: #000080;
 }
