--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+  width: 100%;
   font: inherit;
   padding: 0.5rem 1.5rem;
   border: 1px solid #000080;
@@ -17,4 +18,10 @@
   background: blue;
   border-color: blue;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
+}
+
+@media (min-width: 786px) {
+  .button {
+    width: auto;
+  }
 }
